Added sliders page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,27 @@
 <h1>Lasagna</h1>
+<img src="https://www.allrecipes.com/thmb/ZAe9AvP7-r27sDDKsFoaTdAgKiU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/12011-Easy-Lasagna-DDMFS-4x3-1491-62dd050e31b849f1bb54e13becf5cb98.jpg" height="300" width="300" alt="Lasagna image">
+<h1>How to cook Lasagna</h1>
+<p>
+    Making perfect homemade lasagna doesn’t have to be tedious. This top-rated easy lasagna recipe comes together quickly with a relatively short ingredient list. 
+</p>
+
+<h2>Easy Lasagna Ingredients</h2>
+<p>These are the ingredients you’ll need to make this easy lasagna recipe:</p>
+<ul>
+    <li><p><strong>Beef: </strong>This easy lasagna starts with ground beef. You can use ground turkey for a lighter option.</p></li>
+    <li><p><strong>Spaghetti sauce: </strong>Use store-bought or homemade spaghetti sauce.</p></li>
+    <li><p><strong>Cheeses: </strong>You’ll need cottage cheese, mozzarella, and Parmesan. </p></li>
+    <li><p><strong>Eggs: </strong>Eggs help bind the cheese mixture together. Plus, they lend moisture and richness.</p></li>
+    <li><p><strong>Seasonings: </strong>Season the easy lasagna with dried parsley, salt, and black pepper.</p></li>
+    <li><p><strong>Lasagna noodles: </strong>Of course, you’ll need lasagna noodles!</p></li>
+    <li><p><strong>Water: </strong>Pour ½ cup of water around the edges of the baking dish before baking.</p></li>
+</ul>
+
+<h2>Steps</h2>
+<ol>
+    <li>Cook and drain the ground beef, then stir in the spaghetti sauce and simmer.</li>
+    <li>Combine the cottage cheese, 2 cups of mozzarella, eggs, half of the Parmesan, and seasonings.</li>
+    <li>Assemble the lasagna according to the detailed recipe.</li>
+    <li>Bake, covered, for 45 minutes.</li>
+    <li>Uncover and continue baking for 10 minutes.</li>
+</ol>
