--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Odin Recipes</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
